Correct alignment

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -1429,6 +1429,21 @@ select {
   color: #8A40A7;
 }
 
+pre {
+  display: block;
+  padding: 8.5px;
+  margin: 0 0 9px;
+  font-size: 12px;
+  line-height: 18px;
+  word-break: break-all;
+  word-wrap: break-word;
+  white-space: pre-wrap;
+  background-color: #f5f5f5;
+  border: 1px solid rgba(0, 0, 0, 0.15);
+  border-radius: 4px;
+  vertical-align: middle;
+}
+
 @media (max-width: 575.98px) {
   .main-search-box {
     width: 100%;
